--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "ejs": "^2.3.4",
     "express": "^4.13.3",
+    "fs": "0.0.2",
+    "moment": "^2.10.6",
     "mysql": "^2.9.0",
     "path": "^0.12.7"
   },
